--- a/presentation/slides.html
+++ b/presentation/slides.html
@@ -102,10 +102,59 @@
 </section>
 <section id="content" class="slide level1">
 <h1>Content</h1>
+<ul>
+<li>Motivation</li>
+<li>Background</li>
+<li>My Contribution</li>
+</ul>
+</section>
+<section id="motivation" class="slide level1">
+<h1>Motivation</h1>
+<ul>
+<li>RSI</li>
+<li>Other disabilities</li>
+<li>Under explored field with a lot of potential</li>
+</ul>
 </section>
 <section id="talon" class="slide level1">
 <h1>Talon</h1>
 <p><img data-src="./images/talon_logo.png" /></p>
+</section>
+<section class="slide level1">
+
+<h2 id="talon-1">Talon</h2>
+<ul>
+<li>voice control</li>
+<li>noise control (pop/hiss)</li>
+<li>eye tracking</li>
+<li>facial gesture recognition</li>
+<li>full system control</li>
+<li><a href="https://twitter.com/lunixbochs/status/1378159234861264896">demo</a></li>
+</ul>
+</section>
+<section id="talon-files" class="slide level1">
+<h1>Talon Files</h1>
+<ul>
+<li>declare voice commands</li>
+<li>implement actions</li>
+</ul>
+</section>
+<section class="slide level1">
+
+<p><img src="./images/elmtalon.png" alt="image missing" height="650"/></p>
+</section>
+<section id="python-scripts" class="slide level1">
+<h1>Python Scripts</h1>
+<ul>
+<li>modules</li>
+<li>captures</li>
+<li>actions</li>
+<li>lists</li>
+</ul>
+</section>
+<section class="slide level1">
+
+<p><img src="./images/elmpy.png" alt="image missing" height="650"/></p>
 </section>
 <section id="lsp" class="slide level1">
 <h1>LSP</h1>
@@ -114,7 +163,6 @@
 <section class="slide level1">
 
 <p><img data-src="./images/lsp-matrix.png" /></p>
-<p><a href="https://langserver.org/">https://langserver.org/</a></p>
 </section>
 <section class="slide level1">
 
@@ -144,6 +192,10 @@
     (#eq? @declared-variable &quot;x&quot;)
 )</code></pre>
 <p><a href="https://tree-sitter.github.io/tree-sitter/playground">playground</a></p>
+</section>
+<section id="elm" class="slide level1">
+<h1>Elm</h1>
+<p><img src="./images/elm.png" alt="image missing" /></p>
 </section>
 <section id="my-contribution" class="slide level1">
 <h1>My contribution</h1>
@@ -175,7 +227,7 @@
 <section class="slide level1">
 
 <p><img data-src="./images/rntz.png" /></p>
-<p><a href="https://youtu.be/G8B71MbA9u4?t=2118" target="_blank">Programming language design &amp; programming by voice! (LSD seminar, April 2021)</a></p>
+<p><a href="https://youtu.be/G8B71MbA9u4?t=2062" target="_blank">Programming language design &amp; programming by voice! (LSD seminar, April 2021)</a></p>
 </section>
 <section id="the-study" class="slide level1">
 <h1>The Study</h1>
@@ -204,6 +256,7 @@
 <ul>
 <li>Very positive reception</li>
 <li>All users expressed some interest in using it</li>
+<li>Navigation was especially nice</li>
 </ul>
 </section>
 <section id="miscellaneous" class="slide level1">
@@ -221,8 +274,14 @@
 
 <p><img src="./images/spoken_form.png" alt="image missing" height="650"/></p>
 </section>
-<section class="slide level1">
-
+<section id="conclusions" class="slide level1">
+<h1>Conclusions</h1>
+<ul>
+<li>interest ✅</li>
+<li>need ✅</li>
+<li>suitable tools ✅</li>
+</ul>
+<p>Incredible potential!</p>
 </section>
     </div>
   </div>
