fix elm.py slide

--- a/presentation/slides.html
+++ b/presentation/slides.html
@@ -199,7 +199,7 @@
 </section>
 <section id="my-contribution" class="slide level1">
 <h1>My contribution</h1>
-<p><a href="https://github.com/Gauteab/talon-tree-sitter-service" target="_blank">talon-tree-sitter-service</a></p>
+<p><a href="https://github.com/Gauteab/talon-tree-sitter-service">talon-tree-sitter-service</a></p>
 </section>
 <section id="goals" class="slide level1">
 <h1>Goals</h1>
